@@ -25,6 +25,9 @@
 
 	0.3.1 (Christian Rechner)
 	
+		- The data type of base attributes "start_offset" and "flags_start_offset" now
+		  be written to the ATFX
+		- Added writing of "autogenerated" at application attribute
 		- Implemented returning the unit at methods 'getValue' and 'getValueSeq'
 		- Implemented reading external component files for data types
 		  * DS_LONG
